# uuno

./: LICENSE  README.md  pyproject.toml  uuno.schema
src/: config_normal.py  config_vapaakappale.py  html_page.py  resolver.py  util.py
