[build-system]
requires = ["setuptools>=61.0", "flask>=2.3", "psycopg2>=2.9"]
build-backend = "setuptools.build_meta"

[project]
name = "uuno"
version = "0.9.0"
authors = [
  { name="Emma Pietarila", email="emma.pietarila@helsinki.fi" },
]
description = "A simple URN resolver"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/NatLibFi/uuno"
